# knd

./: .gitignore  CMakeLists.txt  Makefile  README.md  crosscompile.sh
embedded/: CMakeLists.txt  knd.conf  knd_monitor.sh
embedded/systemd/: knd.service
examples/: knd_handbright.sh  knd_handbright2.sh  knd_zonelights.sh
meta/: all_arch_pkgs.sh  cross_pkg.sh  make_pkg.sh
src/: CMakeLists.txt  apxtan.c  inline_defs.c  knd.c  knd.h  kndsrv.c  save.c  vidproc.c  watchdog.c  zone.c
